--- a/webapp/view/Register.view.xml
+++ b/webapp/view/Register.view.xml
@@ -7,7 +7,40 @@
 	<Page
 		title="Register"
         showNavButton="true"
-		navButtonPress=".onNavBack"
-		/>
+		navButtonPress=".onNavBack">
+		
+	  <Panel>
+		 <content>
+             <Input
+                 placeholder="Firstname"
+                 valueLiveUpdate="true"
+                 width="80%"/>
+			  <Input
+                 placeholder="Lastname"
+                 valueLiveUpdate="true"
+                 width="80%"/>
+			   <Input
+                 placeholder="Username"
+                 valueLiveUpdate="true"
+                 width="80%"/>
+			   <Input
+			     type="Password"
+                 placeholder="Password"
+                 valueLiveUpdate="true"
+                 width="80%"/>
+				<Input
+                 placeholder="Company email"
+                 valueLiveUpdate="true"
+                 width="80%"/>
+ 
+              <Button
+            	text="{i18n>SubmitRegister}"
+           		class="myCustomButton"
+            	width="80%"
+           	  />
+        </content>
+	   </Panel>
+
+    </Page>
 
 </mvc:View>
