--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -5,8 +5,8 @@
 	xmlns:f="sap.ui.layout.form"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page
-		title="{i18n>detailPageTitle}"
-	
-		/>
+		title="{i18n>detailPageTitle}">
+
+	</Page>
 
 </mvc:View>
