--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,12 +1,58 @@
 <mvc:View
+
 	controllerName="sap.ui.demo.walkthrough.controller.Main"
 	xmlns="sap.m"
 	xmlns:l="sap.ui.layout"
 	xmlns:f="sap.ui.layout.form"
 	xmlns:mvc="sap.ui.core.mvc">
-	<Page
-		title="{i18n>detailPageTitle}">
+	
+		<Page title="User"
+        showNavButton="true"
+		navButtonPress=".onNavBack">
 
-	</Page>
+ 	<FlexBox alignItems="Center" justifyContent="Center">
+	  	<Panel>
+			 <content>
+ 
+            <Button
+            	text="{i18n>RequestPEG}"
+           		class="myCustomButton"
+				press=".onRequestNewPEG"
+            	width="60%"/>
+
+		
+			<Button
+            	text="{i18n>DisplayPEGList}"
+           		class="myCustomButton"
+            	width="60%"/>
+	   
+
+			<Button
+            	text="{i18n>ListSentReceived}"
+           		class="myCustomButton"
+            	width="60%"/>
+
+			<Button
+            	text="{i18n>ViewProfile}"
+           		class="myCustomButton"
+            	width="60%"/>
+
+
+			<Button
+            	text="{i18n>NewFeedback}"
+           		class="myCustomButton"
+            	width="60%"/>
+
+			<Button
+            	text="{i18n>LogOut}"
+				press=".onLogIn"
+           		class="myCustomButton"
+            	width="60%"/>
+				
+       		</content>
+	  	 </Panel>
+	   </FlexBox>
+	  
+    </Page>
 
 </mvc:View>
