--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -34,18 +34,20 @@
 
 			<Button
             	text="{i18n>ViewProfile}"
+				press=".onMyProfile"
            		class="myCustomButton"
             	width="60%"/>
 
 
 			<Button
             	text="{i18n>NewFeedback}"
+				press=".onNewFeedback"
            		class="myCustomButton"
             	width="60%"/>
 
 			<Button
             	text="{i18n>LogOut}"
-				press=".onLogIn"
+				press=".onLogOut"
            		class="myCustomButton"
             	width="60%"/>
 				
