--- a/webapp/view/DisplayPEGList.view.xml
+++ b/webapp/view/DisplayPEGList.view.xml
@@ -1,14 +1,13 @@
 <mvc:View
-	controllerName="sap.ui.demo.walkthrough.controller.RequestPEG"
+	controllerName="sap.ui.demo.walkthrough.controller.DisplayPEGList"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page
-		title="{i18n>RequestPEG}"
+		title="{i18n>DisplayPEGList}"
         showNavButton="true"
 		navButtonPress=".onNavBack">
 		
 	  
-
     </Page>
 
 </mvc:View>
