--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -24,17 +24,20 @@
 			<Button
             	text="{i18n>DisplayPEGList}"
            		class="myCustomButton"
+				press=".onDisplayPEGList"
             	width="60%"/>
 	   
 
 			<Button
             	text="{i18n>ListSentReceived}"
            		class="myCustomButton"
+				press = ".onListSentReceived"
             	width="60%"/>
 
 			<Button
             	text="{i18n>ViewProfile}"
            		class="myCustomButton"
+				press = ".onProfile"
             	width="60%"/>
 
 
