--- a/webapp/view/MyProfile.view.xml
+++ b/webapp/view/MyProfile.view.xml
@@ -1,9 +1,9 @@
 <mvc:View
-	controllerName="sap.ui.demo.walkthrough.controller.RequestPEG"
+	controllerName="sap.ui.demo.walkthrough.controller.MyProfile"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Page
-		title="{i18n>RequestPEG}"
+		title="{i18n>ViewProfile}"
         showNavButton="true"
 		navButtonPress=".onNavBack">
 		
