--- a/webapp/view/RequestPEG.view.xml
+++ b/webapp/view/RequestPEG.view.xml
@@ -1,13 +1,31 @@
 <mvc:View
 	controllerName="sap.ui.demo.walkthrough.controller.RequestPEG"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:l="sap.ui.layout">
 	<Page
 		title="{i18n>RequestPEG}"
         showNavButton="true"
 		navButtonPress=".onNavBack">
-		
-	  
+
+		<l:VerticalLayout class="sapUiContentPadding" width="100%">
+
+				<Label text="Name" labelFor="input-1" />
+				<Input id="input-1"  />
+
+				<Label text="Email" labelFor="input-2"/>
+				<Input id="input-2" />
+
+				<Label text="Career level" labelFor="input-3" />
+				<Input id="input-3" />
+
+				<Label text="Project name" labelFor="input-4" required="true" />
+				<Input id="input-4" />
+
+				<Label text="Project manager" labelFor="input-5" required="true" />
+				<Input id="input-5" />
+
+		</l:VerticalLayout>
 
     </Page>
 
