--- a/webapp/view/NewFeedback.view.xml
+++ b/webapp/view/NewFeedback.view.xml
@@ -4,16 +4,17 @@
 	xmlns:mvc="sap.ui.core.mvc" 
 	xmlns:l="sap.ui.layout"
 	xmlns:f="sap.ui.layout.form"
-	xmlns="sap.m" >
+	xmlns="sap.m">
 
 	<Page
 		title="New Feedback"
         showNavButton="true"
 		navButtonPress=".onNavBack">
-		
 
+        
+       	<l:VerticalLayout class="sapUiContentPadding" width="100%">
+	
 
-		<Panel>
         <f:SimpleForm id="form" editable="true"
           layout="ResponsiveGridLayout"
             labelSpanXL="3"
@@ -30,45 +31,57 @@
             columnsM="1"
             singleContainerFullSize="false">
 
-            <f:content>
-            <Label text="Select user" />
-			<ComboBox 
-				items="{
-					path: '/UsersCollection',
-					sorter: { path: 'Name' }
-				}">
-				<core:Item key="{Id}" text="{Name}" />
-			</ComboBox>
+        
+         <Label text="Select user" labelFor="inputToUser"/>
+         <Select forceSelection="false" id = "inputToUser"   items="{/UsernamesSet}" change = "onUserChange">
+           <core:ListItem key="{Username}" text="{Username}"/>
+           
+         </Select> 
 
 
-			<Label text="Select project" />
-			<ComboBox 
-				items="{
-					path: '/Projects',
-					sorter: { path: 'Name' }
-				}">
-				<core:Item key="{Id}" text="{Name}" />
-			</ComboBox>
+             <Label text="Select projects " labelFor="inputToProject"/>
+         <Select forceSelection="false" id = "inputToProject"   items="{toProjects}" >
+           <core:ListItem key="{ProjectId}" text="{ProjectName}"/>
+           
+         </Select> 
 			
+
+            <!-- Annonymous? -->
+           
   			<CheckBox text="Anonymous feedback" selected="false" />
 
 
+         
 
-         <Label text="Offer feedback based on the following skill" labelFor="inputSkill"/>
-         <Select forceSelection="false" id = "inputSkill"  selectedKey="{SelectedSkill}" items="{
-                                                    path: '/SkillCollection',
-                                                    sorter: { path: 'Name' }
-                                                }">
-           <core:ListItem key="{Id}" text="{Name}"/>
-         </Select>
-                    
-		
+            <Label text="Offer feedback based on the following skill" labelFor="inputSkill"/>
+           <Select forceSelection="false" id = "inputSkill"  selectedKey="{SelectedSkill}" items="{
+                                                    path: 'newFeedbackModel>/SkillCollection'}">
+           <core:ListItem key="{newFeedbackModel>Id}" text="{newFeedbackModel>Name}"/>
+          
+         </Select> 
 
-               
-    </f:content>
+
+		<RatingIndicator id="inputRating" maxValue="5" class="sapUiSmallMarginBottom" value="0" tooltip="Rating Tooltip" />
+
+     
         </f:SimpleForm>
-            
-        </Panel>
+        <Label text="Description" labelFor="inputDescription"/>
+         <TextArea placeholder="Enter Text" id="inputDescription" growing="true" growingMaxLines="7" height = "100px" width="90%"/>
+
+    
+       </l:VerticalLayout>
+
+
+       <footer>
+ 			<Bar>
+   				<contentRight>
+      				<Button
+           				text="Send" press=".onSend" class="myCustomButton"
+					/>
+    			</contentRight>
+  			</Bar>
+		</footer>
+       
     </Page>
 
 </mvc:View>
