--- a/webapp/view/MyProfile.view.xml
+++ b/webapp/view/MyProfile.view.xml
@@ -1,83 +1,140 @@
-<mvc:View controllerName="sap.ui.demo.walkthrough.controller.MyProfile" 
-xmlns:core="sap.ui.core"
-xmlns:mvc="sap.ui.core.mvc" 
-xmlns:l="sap.ui.layout"
-xmlns:f="sap.ui.layout.form"
-xmlns="sap.m" >
-
-    <Page title="{i18n>ViewProfile}" showNavButton="true" navButtonPress=".onNavBack" class="sapUiContentPadding">
-
-        <Panel>
-        <f:SimpleForm id="form" editable="true"
-          layout="ResponsiveGridLayout"
-            labelSpanXL="3"
-            labelSpanL="3"
-            labelSpanM="3"
-            labelSpanS="12"
-            adjustLabelSpan="false"
-            emptySpanXL="3"
-            emptySpanL="3"
-            emptySpanM="3"
-            emptySpanS="0"
-            columnsXL="1"
-            columnsL="1"
-            columnsM="1"
-            singleContainerFullSize="false">
-            <f:content>
-
-                    <Label text="Name" labelFor="inputText"/>
-                    <Input value="{FullName}" id="inputText" editable="false"  placeholder="Enter full name" class="sapUiSmallMarginBottom"/>
-
-                    <Label text="Username" labelFor="inputUser"/>
-                    <Input value="{Username}" id="inputUser" editable="false" placeholder="Enter usernmame" class="sapUiSmallMarginBottom"/>
-
-
-                    <Label text="Email" labelFor="inputEmail"/>
-                    <Input value="{Email}" id="inputEmail" editable="false" placeholder="Enter email" class="sapUiSmallMarginBottom"/>
-
-                    <Label text="Telephone" labelFor="inputTel"/>
-                    <Input value="{PersonalNo}" id="inputTel" editable="false" placeholder="Enter personal number" class="sapUiSmallMarginBottom"/>
-
-
-                    <Label text="SU" labelFor="inputSU"/>
-                    <Input value="{Su}" id="inputSU" editable="false" placeholder="Enter Service Unit"  class="sapUiSmallMarginBottom"/>
-
-
-                    <Label text="Career level" labelFor="inputLevel"/>
-
-                    <Select forceSelection="false" id = "inputLevel" editable="false" selectedKey="{CareerLevel}" items="{
-                                                    path: 'myProfileModel>/Levels',
-                                                    sorter: { path: 'myProfileModel>Levels/Name' }
-                                                }">
-                        <core:ListItem key="{myProfileModel>Id}" text="{myProfileModel>Name}"/>
-                    </Select>
-
-
-                    <Label text="Fiscal year" labelFor="inputFiscalYear"/>
-                    <Input value="{FiscalYear}" id="inputFiscalYear" editable="false" class="sapUiSmallMarginBottom"/>
-
-
-               
-    </f:content>
-        </f:SimpleForm>
-            
-        </Panel>
-
-        <footer>
-            <Toolbar>
-                <ToolbarSpacer/>
-                
-                <Button type="Emphasized" text="Save" press="onPressSave"/>  
-                <HBox>
-			        <Switch state="false" customTextOn="  " customTextOff="Edit" change="onEdit">
-				        <layoutData>
-					        <FlexItemData growFactor="1" />
-				        </layoutData>
-			        </Switch>
-		        </HBox>
-            </Toolbar>
-        </footer>
-
-    </Page>
-
+<mvc:View
+	controllerName="sap.ui.demo.walkthrough.controller.MyProfile"
+	xmlns:core="sap.ui.core"
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns:f="sap.ui.layout.form"
+	xmlns="sap.m"
+>
+	<Page
+		title="{i18n>ViewProfile}"
+		showNavButton="true"
+		navButtonPress=".onNavBack"
+		class="sapUiContentPadding"
+	>
+		<Panel>
+			<f:SimpleForm
+				id="form"
+				editable="true"
+				layout="ResponsiveGridLayout"
+				labelSpanXL="3"
+				labelSpanL="3"
+				labelSpanM="3"
+				adjustLabelSpan="false"
+				emptySpanXL="3"
+				emptySpanL="3"
+				emptySpanM="3"
+				columnsXL="1"
+				columnsL="1"
+				singleContainerFullSize="false"
+			>
+				<f:content>
+					<Label
+						text="Name"
+						labelFor="inputName"
+					/>
+					<Input
+						value="{FullName}"
+						id="inputName"
+						editable="false"
+						placeholder="Enter full name"
+						class="sapUiSmallMarginBottom"
+					/>
+					<Label
+						text="Username"
+						labelFor="inputUser"
+					/>
+					<Input
+						value="{Username}"
+						id="inputUser"
+						editable="false"
+						placeholder="Enter usernmame"
+						class="sapUiSmallMarginBottom"
+					/>
+					<Label
+						text="Email"
+						labelFor="inputEmail"
+					/>
+					<Input
+						value="{Email}"
+						id="inputEmail"
+						editable="false"
+						placeholder="Enter email"
+						class="sapUiSmallMarginBottom"
+					/>
+					<Label
+						text="Telephone"
+						labelFor="inputTel"
+					/>
+					<Input
+						value="{PersonalNo}"
+						id="inputTel"
+						editable="false"
+						placeholder="Enter personal number"
+						class="sapUiSmallMarginBottom"
+					/>
+					<Label
+						text="SU"
+						labelFor="inputSU"
+					/>
+					<Input
+						value="{Su}"
+						id="inputSU"
+						editable="false"
+						placeholder="Enter Service Unit"
+						class="sapUiSmallMarginBottom"
+					/>
+					<Label
+						text="Career level"
+						labelFor="inputLevel"
+					/>
+					<Select
+						forceSelection="false"
+						id="inputLevel"
+						editable="false"
+						selectedKey="{CareerLevel}"
+						items="{
+                            path: 'myProfileModel>/Levels',
+                            sorter: { path: 'myProfileModel>Levels/Name' }
+                        }"
+					>
+						<core:ListItem
+							key="{myProfileModel>Id}"
+							text="{myProfileModel>Name}"
+						/>
+					</Select>
+					<Label
+						text="Fiscal year"
+						labelFor="inputFiscalYear"
+					/>
+					<Input
+						value="{FiscalYear}"
+						id="inputFiscalYear"
+						editable="false"
+						class="sapUiSmallMarginBottom"
+					/>
+				</f:content>
+			</f:SimpleForm>
+		</Panel>
+		<footer>
+			<Toolbar>
+				<ToolbarSpacer/>
+				<Button
+					type="Emphasized"
+					text="Save"
+					press="onPressSave"
+				/>
+				<HBox>
+					<Switch
+						customTextOn="  "
+						customTextOff="Edit"
+						change="onEdit"
+					>
+						<layoutData>
+							<FlexItemData growFactor="1"/>
+						</layoutData>
+					</Switch>
+				</HBox>
+			</Toolbar>
+		</footer>
+	</Page>
 </mvc:View>
