--- a/webapp/view/UserPEG.view.xml
+++ b/webapp/view/UserPEG.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="sap.ui.demo.walkthrough.controller.DisplayPEGList"
+	controllerName="sap.ui.demo.walkthrough.controller.UserPEG"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 
