Final fixes for 360 feedback

--- a/webapp/view/NewFeedback.view.xml
+++ b/webapp/view/NewFeedback.view.xml
@@ -84,6 +84,7 @@
 				<RatingIndicator
 					id="inputRating"
 					class="sapUiSmallMarginBottom"
+          value="1"
 					tooltip="{i18n>RatingTooltip}"
 				/>
 			</f:SimpleForm>
